# kubevirt

./: BUILD.bazel
api/openapi-spec/: swagger.json
cmd/convert-machine-type/: BUILD.bazel  main.go
hack/: bazel-push-images.sh
pkg/instancetype/: instancetype.go  instancetype_test.go
pkg/monitoring/domainstats/prometheus/: prometheus_test.go
pkg/monitoring/rules/alerts/: system.go  virt-handler.go  vms.go
pkg/network/driver/nmstate/: status_test.go
pkg/network/setup/netpod/: netpod_test.go
pkg/storage/export/export/: export.go  export_test.go  vm-source.go  vmsnapshot-source.go  vmsnapshot-source_test.go
pkg/storage/snapshot/: restore_test.go
pkg/virt-api/rest/: subresource.go  subresource_test.go
pkg/virt-api/webhooks/mutating-webhook/mutators/: clone-create-mutator_test.go  vm-mutator.go  vmi-mutator_test.go
pkg/virt-api/webhooks/validating-webhook/admitters/: BUILD.bazel  migrationpolicy-admitter_test.go  vmclone-admitter_test.go  vmi-create-admitter.go  vmi-create-admitter_test.go  vmsnapshot-admitter_test.go
pkg/virt-controller/services/: rendercontainer.go  renderresources.go  renderresources_test.go  serialconsolelog.go  template.go  template_test.go  virtiofs.go
pkg/virt-controller/watch/: migration.go  migration_test.go  pool.go  vm.go  vm_test.go  vmi_test.go
pkg/virt-controller/watch/clone/: clone.go  util.go
pkg/virt-controller/watch/topology/: hinter.go  hinter_test.go  tsc_test.go
pkg/virt-handler/: vm_test.go
pkg/virt-handler/migration-proxy/: migration-proxy_test.go
pkg/virt-launcher/virtwrap/: manager.go  manager_test.go
pkg/virt-launcher/virtwrap/cmd-server/: server.go
pkg/virt-launcher/virtwrap/converter/: converter.go  converter_test.go
pkg/virt-operator/: kubevirt_test.go
pkg/virt-operator/resource/apply/: apps.go
pkg/virt-operator/resource/generate/components/: crds.go  daemonsets.go  deployments.go  validations_generated.go  webhooks.go
pkg/virt-operator/resource/generate/csv/: csv.go
pkg/virt-operator/resource/generate/install/: strategy.go
pkg/virt-operator/resource/generate/rbac/: BUILD.bazel  convertmachinetype.go
pkg/virt-operator/webhooks/: kubevirt-update-admitter.go  kubevirt-update-admitter_test.go
pkg/virtctl/: BUILD.bazel  root.go
pkg/virtctl/convert-machine-type/: BUILD.bazel  convert_machine_type.go
pkg/virtctl/convert-machine-type/convert-machine-type-job/: BUILD.bazel  convert_machine_type.go  convert_machine_type_job_suite_test.go  convert_machine_type_test.go  informers.go  update_machine_type.go  update_machine_type_test.go
pkg/virtctl/convertmachinetype/: BUILD.bazel  convert_machine_type.go  convert_machine_type_suite_test.go  convert_machine_type_test.go
pkg/virtctl/convertmachinetype/massmachinetypetransition/: BUILD.bazel  informers.go  informers_test.go  main.go  mass_machine_type_transition.go  mass_machine_type_transition_suite_test.go  update_machine_type.go  update_machine_type_test.go
pkg/virtctl/create/vm/: vm_test.go
pkg/virtctl/credentials/add-key/: add-key.go  add-key_test.go
pkg/virtctl/credentials/remove-key/: remove-key_test.go
pkg/virtctl/credentials/set-password/: set-password_test.go
pkg/virtctl/update/machine-type/: machine_type.go
pkg/virtctl/update/machine-type/convert-machine-type/: BUILD.bazel  controller.go  controller_test.go  convert_machine_type.go  convert_machine_type_test.go  informers.go  update_machine_type.go  update_machine_type_test.go
pkg/virtctl/vm/: restart.go  start_test.go  stop.go  stop_test.go
staging/src/kubevirt.io/api/core/v1/: types.go  types_swagger_generated.go
staging/src/kubevirt.io/client-go/api/: openapi_generated.go
tests/: clone_test.go  hyperv_test.go  instancetype_test.go  io_utils.go  mdev_configuration_allocation_test.go  pool_test.go  subresource_api_test.go  swap_test.go  sysprep_test.go  utils.go  vm_state_test.go  vm_test.go  vmi_cloudinit_test.go  vmi_configuration_test.go  vmi_multiqueue_test.go  vmi_vsock_test.go
tests/framework/storage/: nfs.go
tests/hotplug/: affinity.go  cpu.go
tests/libpod/: render.go
tests/libstorage/: pvc.go
tests/migration/: BUILD.bazel  eviction_strategy.go  migration.go
tests/network/: vmi_networking.go  vmi_slirp_interface.go
tests/operator/: operator.go
tests/storage/: datavolume.go  export.go  hotplug.go  restore.go  snapshot.go
tests/testsuite/: kubevirtresource.go
tests/virtctl/: BUILD.bazel  convert_machine_type.go  credentials.go  update_machine_types.go
tools/vms-generator/utils/: utils.go
