load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["convert_machine_type.go"],
    importpath = "kubevirt.io/kubevirt/pkg/virtctl/convertmachinetype",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/virtctl/templates:go_default_library",
        "//staging/src/kubevirt.io/client-go/kubecli:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/k8s.io/api/batch/v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/k8s.io/utils/pointer:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "convert_machine_type_suite_test.go",
        "convert_machine_type_test.go",
    ],
    deps = [
        ":go_default_library",
        "//tests/clientcmd:go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)
